full updated enquiry form pop up had been left

--- a/src/index.html
+++ b/src/index.html
@@ -251,7 +251,7 @@
             </a>
 
             <!-- Add margin-left for spacing -->
-            <a href="loginpagge.html" class="text-white hover:text-gray-300 ml-4">Sign In</a>
+            <a href="loginpage.html" class="text-white hover:text-gray-300 ml-4">Sign In</a>
         </div>
 
     </div>
@@ -271,9 +271,9 @@
                 </button>
             </a>
             &nbsp;
-            <a href="studentform.html">
+            <a href="EnquiryForm.html">
                 <button class="bg-white hover:bg-blue-500 px-6 py-3 rounded-lg text-lg">
-                    Registration Form
+                    Enquiry Form
                 </button>
             </a>
         </div>
@@ -282,7 +282,7 @@
                 class="h-96 rounded-lg glass">
         </div>
     </main>
-
+   
 
 
     <section class="container mx-auto px-4 py-10">
