--- a/src/loginpage.html
+++ b/src/loginpage.html
@@ -27,17 +27,16 @@
             </form>
         </div>
         <div class="form-container sign-in-container">
-            <form action="#">
+            <form id="adminLoginForm">
                 <h1>Admin Login</h1>
                 <span>Login with your credentials</span>
                 <div class="input-group">
-                    <input type="email" placeholder="Email" required />
+                    <input type="email" id="adminEmail" placeholder="Enter email" required />
                 </div>
                 <div class="input-group">
-                    <input type="password" placeholder="Password" required />
+                    <input type="password" id="adminPassword" placeholder=" Enter password" required />
                 </div>
-                <a href="#" class="forgot-password">Forgot your password?</a>
-                <button type="submit">Sign up</button>
+                <button type="submit">Sign in</button>
             </form>
         </div>
         <div class="overlay-container">
@@ -55,7 +54,7 @@
             </div>
         </div>
     </div>
-    <script src="backend/loginpagge.js"></script>
+    <script src="backend/loginpage.js"></script>
 </body>
 
 </html>
