--- a/src/studentform.html
+++ b/src/studentform.html
@@ -52,12 +52,12 @@
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="candidateName">Name of the Trainee (As Per SSC) *</label>
-                            <input type="text" id="candidateName" name="candidateName" required>
+                            <input type="text" id="candidateName" name="candidateName" placeholder="Enter Full Name" required>
                             <span class="error" id="candidateNameError"></span>
                         </div>
                         <div class="form-group">
                             <label for="surname">Surname of the Trainee *</label>
-                            <input type="text" id="surname" name="surname" required>
+                            <input type="text" id="surname" name="surname" placeholder="Enter Surname" required>
                             <span class="error" id="surnameError"></span>
                         </div>
                         <div class="form-group">
@@ -113,7 +113,7 @@
                         </div>
                         <div class="form-group">
                             <label for="mobile">Mobile Number *</label>
-                            <input type="tel" id="mobile" name="mobile" maxlength="10" required>
+                            <input type="tel" id="mobile" name="mobile" maxlength="10" placeholder="Enter Phone Number" required>
                             <span class="error" id="mobileError"></span>
                         </div>
                         <div class="form-group">
@@ -143,7 +143,7 @@
                         </div>
                         <div class="form-group">
                             <label for="email">E-mail ID *</label>
-                            <input type="email" id="email" name="email" required>
+                            <input type="email" id="email" name="email" placeholder="Enter E-mail" required>
                             <span class="error" id="emailError"></span>
                         </div>
                     </div>
@@ -202,22 +202,22 @@
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="guardianName">Father's / Mother's / Guardian's Name *</label>
-                            <input type="text" id="guardianName" name="guardianName" required>
+                            <input type="text" id="guardianName" name="guardianName" placeholder="Enter Parent Name" required>
                             <span class="error" id="guardianNameError"></span>
                         </div>
                         <div class="form-group">
                             <label for="guardianOccupation">Father's / Mother's / Guardian's Occupation *</label>
-                            <input type="text" id="guardianOccupation" name="guardianOccupation" required>
+                            <input type="text" id="guardianOccupation" name="guardianOccupation" placeholder="Enter Parent Occupation" required>
                             <span class="error" id="guardianOccupationError"></span>
                         </div>
                         <div class="form-group">
                             <label for="guardianContact">Father's / Mother's / Guardian's Contact No *</label>
-                            <input type="tel" id="guardianContact" name="guardianContact" maxlength="10" required>
+                            <input type="tel" id="guardianContact" name="guardianContact" maxlength="10" placeholder="Enter Parent phone Number" required>
                             <span class="error" id="guardianContactError"></span>
                         </div>
                         <div class="form-group">
                             <label for="guardianIncome">Father's / Mother's / Guardian's Annual Income *</label>
-                            <input type="number" id="guardianIncome" name="guardianIncome" required>
+                            <input type="number" id="guardianIncome" name="guardianIncome" placeholder="Enter Parent Annual Income" required>
                             <span class="error" id="guardianIncomeError"></span>
                         </div>
                     </div>
@@ -231,22 +231,22 @@
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="doorNo">D.No / Locality *</label>
-                            <input type="text" id="doorNo" name="doorNo" required>
+                            <input type="text" id="doorNo" name="doorNo" placeholder="Enter House Number" required>
                             <span class="error" id="doorNoError"></span>
                         </div>
                         <div class="form-group">
                             <label for="village">Village / Town *</label>
-                            <input type="text" id="village" name="village" required>
+                            <input type="text" id="village" name="village" placeholder="Enter your area Name" required>
                             <span class="error" id="villageError"></span>
                         </div>
                         <div class="form-group">
                             <label for="mandal">Mandal / Tahasil *</label>
-                            <input type="text" id="mandal" name="mandal" required>
+                            <input type="text" id="mandal" name="mandal" placeholder="Enter Mandal" required>
                             <span class="error" id="mandalError"></span>
                         </div>
                         <div class="form-group">
                             <label for="pincode">Pin Code *</label>
-                            <input type="text" id="pincode" name="pincode" maxlength="6" required onchange="fetchLocationDetails()">
+                            <input type="text" id="pincode" name="pincode" maxlength="6" placeholder="Enter 6 Digits PinCode" onchange="fetchLocationDetails()">
                             <span class="error" id="pincodeError"></span>
                         </div>
                         <div class="form-group">
@@ -268,7 +268,7 @@
                     <div class="form-grid">
                         <div class="form-group">
                             <label for="aadhar">Aadhar Number (Copy to be Submitted) *</label>
-                            <input type="text" id="aadhar" name="aadhar" maxlength="12" required>
+                            <input type="text" id="aadhar" name="aadhar" maxlength="12" placeholder="Enter 12 Digits Aadhar Number" required>
                             <span class="error" id="aadharError"></span>
                         </div>
                     </div>
