pdf_templet updated as looks in trinee form

--- a/src/PAGES/Dashboard.html
+++ b/src/PAGES/Dashboard.html
@@ -36,7 +36,7 @@
 			<span class="material-icons toggle-icon students-toggle">expand_more</span>
 		</div>
 		<div class="submenu students-submenu">
-			<a href="#"><span class="material-icons">group_add</span> Add Student</a>
+			<a href="studentform.html"><span class="material-icons">group_add</span> Add Student</a>
 			<a href="#"><span class="material-icons">visibility</span> View Students</a>
 		</div>
 
