--- a/src/PAGES/Pdf_template.html
+++ b/src/PAGES/Pdf_template.html
@@ -147,6 +147,7 @@
                 <td style="font-size: 12px;"><B>D.No / LOCALITY</B></td>
                 <td id="DoorNo"></td>
             </tr>
+
             <tr>
                 <td style="font-size: 12px;"><B>24</B></td>
                 <td style="font-size: 12px;"><B>VILLAGE / TOWN</B></td>
@@ -244,6 +245,132 @@
                 <p>Seal</p>
             </div>
         </div>
+        &nbsp;
+        <br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <h2>
+            <ul>
+                <a href="" style="color: black;">Undertaking from Trainee</a>
+            </ul>
+        </h2>
+        <br><br>
+
+        <p style="text-align: right; line-height: 4;"><b>Date: ___________________________</b></p>
+        <br>
+        <p style="line-height: 4;"><b>Full Name of the applicant (As per Aadhar Card):
+                ____________________________________________</b></p>
+        <p style="line-height: 4;"><b>Name of the course joining: ____________________________________________</b></p>
+        <p style="line-height: 4;"><b>Name of the Training Associate: ____________________________________________</b>
+        </p>
+        <br>
+
+        <p><b>This undertaking is given by me, upon joining Skill Development Institute, Visakhapatnam, as a trainee by
+                signing this undertaking, I affirm that I have read and understood the rules and regulations, discipline
+                etc., of Skill Development Institute, Visakhapatnam and I agree to abide by the same, as follows during
+                my tenure.</b></p>
+        &nbsp; <br>
+        <li style="font-size: small;"><b>I confirm that I am not pursuing any other course/Job and will attend regularly
+                to the above course as per the schedule. I further undertake that, I will not absent during the course
+                except during emergency.</b></li>
+        <li style="font-size: small;"><b>I will attend Yoga between 05.00 AM and 06.30 AM while in hostel without
+                FAIL</b></li>
+        <li style="font-size: small;"><b>I will complete breakfast before 08.45 AM and proceed for Prayer.</b></li>
+        <li style="font-size: small;"><b>I will complete breakfast before 08.45 AM and proceed for Prayer.</b></li>
+        <li style="font-size: small;"><b>I know that the normal training hours are 09.00 AM to 05.30 PM (Monday to
+                Saturday).</b></li>
+        <li style="font-size: small;"><b>I do not carry smart phones to the campus and if found in classroom or hostel,
+                SDI has the right to seize the same or can take appropriate action including expelling from the
+                course.</b></li>
+        <li style="font-size: small;"><b>I will not ask for permissions during class hours</b></li>
+        <li style="font-size: small;"><b>I am responsible for my belongings and do not come with any complaints
+                regarding thefts etc. in this regard</b></li>
+        <li style="font-size: small;"><b>I will not consume tobacco, alcohol, Drugs etc. in SOI premises</b></li>
+        <li style="font-size: small;"><b>I know that any indiscipline, misbehavior with security, workers, other
+                students, faculty in the campus will be dealt very strictly and student will be expelled with due
+                penalty</b></li>
+        <li style="font-size: small;"><b>I disclose my history of health problems and I am fit for attending to the
+                classes</b></li>
+        <li style="font-size: small;"><b>I am aware that by merely undergoing training programme, I would not be
+                guaranteed any job</b></li>
+        <li style="font-size: small;"><b>I will not cause damage to any property/facility provided by SDI, Visakhapatnam
+                for my training/stay and I will be liable for damages caused by me. If found indulging in any such act,
+                I understand 501, Visakhapatnam will take appropriate action against me.</b></li>
+        <li style="font-size: small;"><b>I will not bring outside food under any circumstances.</b></li>
+        <li style="font-size: small;"><b>Any other rules and regulations imparted time to time.</b></li>
+        <br>
+        <p style="text-align: center;"><b>In case the above are violated, I abide by the action taken by the Training
+                Associate or the institute</b>
+        </p>
+        <br> <br> <br><br>
+        <div style="display: flex; justify-content: space-between; margin-top: 40px; text-align: center;">
+            <div>
+                <hr style="width: 180px; margin-bottom: 5px;">
+                <span style="display: block; text-align: left;">Sign of Student</span>
+                <br>
+                <span style="display: inline-block;">Contact No:</span>
+                <hr style="width: 100px; margin: 0; display: inline-block;">
+            </div>
+
+            <div>
+                <hr style="width: 200px; margin-bottom: 5px;">
+                <span>Sign of Parent / Guardian</span>
+                <br>
+                <br>
+                <span>Contact No:</span>
+                <hr style="width: 100px; margin: 0px 0; display: inline-block;">
+            </div>
+            <div>
+                <hr style="width: 200px; margin-bottom: 5px;">
+                <span>Sign of TP</span>
+                <br>
+                <br>
+                <span>Stamp of TP</span>
+
+            </div>
+
+        </div>
+        <br><br><br><br><br><br><br><br><br>
+        <h2>
+            <ul>
+                <a href="" style="color: black;">PARENTS/GUARDIAN CONSENT FORM</a>
+            </ul>
+        </h2>
+        <br><br>
+        <p style="line-height: 1.5;"><b>I,____________________________(full name with surnamem), confirm that I am the
+                father / mother / legal
+                guardian of the candidate_______________________________(Trainee full name including surname)</b></p>
+        <br><br><br>
+        <p><b>I hereby consent to the above candidate joining for training course to be conducted at Skill Development
+                Institute, Visakhapatnam wef 05/10/2020.</b></p>
+        <br><br><br>
+        <p><b>I understand that the training is conducted post unlock Covid-19 guidelines of Ministry of Home and Family
+                Welfare and other concerned ministries.</b></p>
+        &nbsp;
+        <p><b>I understand the problems and seriousness, associated with infectlun of Covid-19.</b></p> &nbsp;
+        <p><b>I understand that stringent preventive, protective measures need to be followed by every individual at all
+                times.</b></p> &nbsp;
+        <p><b>I understand that Covid-19 may affect even due to non-compliance to the preventive measures by other
+                individual with whom a person is associated with.</b></p> &nbsp;
+        <p><b>I understand that the training is given free of cost with free boarding and lodging facility.</b></p>
+        &nbsp;
+        <p><b>I understand that the course duration is _____ days which may vary as per che conditions prevailing</b>
+        </p>
+        &nbsp;
+        <p><b>understand that above candidate has to stay fully in the hostel itself during the entire training period,
+                unless otherwise asked to leave due to safety or other reasons.</b></p>&nbsp;
+        <p><b>I undertake that the institute may conduct any Covid-19 related health check-ups</b></p>&nbsp;
+        <p><b>I undertake to withdraw above candidate immediately from the institute & hostel upon finding any Covid-19
+                positive report at any point of tenure of the training</b></p>&nbsp;
+
+        <p><b>Full residential address:</b></p><br><br><br><br>
+
+        <p><b>Emergency contact number(s):</b> 1. _____________________</p>
+        &nbsp;<p>2. _____________________</p>&nbsp;
+
+        <p><b>Date:</b> ______________________</p>
+        
+            <p style="text-align: right;"><b>Signature of parent/legal guardian</b></p>
+      
         <div class="btn">
             <!-- Save Button to Print/Download PDF -->
             <button class="save-btn" onclick="printPDF()">Download PDF</button>
@@ -254,6 +381,7 @@
 
         </div>
     </div>
+
 
     <!-- jsPDF and html2canvas -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
