--- a/src/PAGES/addtrainer.html
+++ b/src/PAGES/addtrainer.html
@@ -37,8 +37,19 @@
             <span class="material-icons toggle-icon students-toggle">expand_more</span>
         </div>
         <div class="submenu students-submenu">
-            <a href="#"><span class="material-icons">add</span> Add Student</a>
+            <a href="studentform.html"><span class="material-icons">add</span> Add Student</a>
             <a href="#"><span class="material-icons">visibility</span> View Students</a>
+        </div>
+
+        <div class="dropdown-menu Batches-menu">
+            <a><span class="material-icons">group</span> Batches</a>
+            <span class="material-icons toggle-icon Batches-toggle">expand_more</span>
+        </div>
+        <div class="submenu Batches-submenu">
+            <a href="#"><span class="material-icons"><span class="material-symbols-outlined">
+                        person_add
+                    </span></span> Add Trainer</a>
+            <a href="#"><span class="material-icons">visibility</span> View Trainers</a>
         </div>
 
         <div class="dropdown-menu trainers-menu">
