--- a/src/PAGES/studentform.html
+++ b/src/PAGES/studentform.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Registration</title>
     <link rel="stylesheet" href="../CSS/studentform.css">
-    <script src="../backend/middleware/tokenvalidity.js"></script>
+
 </head>
 
 <body>
@@ -87,9 +87,9 @@
                             <label for="gender">Gender *</label>
                             <select id="gender" name="gender" required>
                                 <option value="">Select Gender</option>
-                                <option value="male">MALE</option>
-                                <option value="female">FEMALE</option>
-                                <option value="other">OTHERS</option>
+                                <option value="MALE">MALE</option>
+                                <option value="FEMALE">FEMALE</option>
+                                <option value="OTHERS">OTHERS</option>
                             </select>
                             <span class="error" id="genderError"></span>
                         </div>
@@ -108,13 +108,13 @@
                             <label for="religion">Religion *</label>
                             <select id="religion" name="religion" required>
                                 <option value="">Select Religion</option>
-                                <option value="hindu">HINDU</option>
-                                <option value="muslim">MUSLIM</option>
-                                <option value="christian">CHRISTIAN</option>
-                                <option value="sikh">SIKH</option>
-                                <option value="buddhist">BUDDHIST</option>
-                                <option value="jain">JAIN</option>
-                                <option value="other">OTHERS</option>
+                                <option value="HINDU">HINDU</option>
+                                <option value="MUSLIM">MUSLIM</option>
+                                <option value="CHRISTIAN">CHRISTIAN</option>
+                                <option value="SIKH">SIKH</option>
+                                <option value="BUDDHIST">BUDDHIST</option>
+                                <option value="JAIN">JAIN</option>
+                                <option value="OTHERSr">OTHERS</option>
                             </select>
                             <span class="error" id="religionError"></span>
                         </div>
@@ -122,11 +122,11 @@
                             <label for="category">Category *</label>
                             <select id="category" name="category" required onchange="updateSubCategory()">
                                 <option value="">Select Category</option>
-                                <option value="general">GENERAL</option>
-                                <option value="sc">SC</option>
-                                <option value="st">ST</option>
-                                <option value="obc">OBC</option>
-                                <option value="other">OTHERS</option>
+                                <option value="GENERAL">GENERAL</option>
+                                <option value="SC">SC</option>
+                                <option value="ST">ST</option>
+                                <option value="OBC">OBC</option>
+                                <option value="OTHERS">OTHERS</option>
                             </select>
                             <span class="error" id="categoryError"></span>
                         </div>
@@ -146,10 +146,10 @@
                             <label for="maritalStatus">Marital Status *</label>
                             <select id="maritalStatus" name="maritalStatus" required>
                                 <option value="">Select Marital Status</option>
-                                <option value="single">UN-MARRIED</option>
-                                <option value="married">MARRIED</option>
-                                <option value="divorced">DIVORCED</option>
-                                <option value="widowed">WIDOWED</option>
+                                <option value="UN-MARRIED">UN-MARRIED</option>
+                                <option value="MARRIED">MARRIED</option>
+                                <option value="DIVORCED">DIVORCED</option>
+                                <option value="WIDOWED">WIDOWED</option>
                             </select>
                             <span class="error" id="maritalStatusError"></span>
                         </div>
@@ -185,12 +185,12 @@
                             <label for="minQualification">Minimum Qualification *</label>
                             <select id="minQualification" name="minQualification" required>
                                 <option value="">Select Qualification</option>
-                                <option value="10th">10TH</option>
-                                <option value="12th">INTERMEDIATE</option>
-                                <option value="diploma">DIPLOMA</option>
-                                <option value="iti">I.T.I</option>
-                                <option value="degree">DEGREE</option>
-                                <option value="btech">B.TECH</option>
+                                <option value="10TH">10TH</option>
+                                <option value="INTERMEDIATE">INTERMEDIATE</option>
+                                <option value="DIPLOMA">DIPLOMA</option>
+                                <option value="I.T.I">I.T.I</option>
+                                <option value="DEGREE">DEGREE</option>
+                                <option value="B.TECH">B.TECH</option>
                             </select>
                             <span class="error" id="minQualificationError"></span>
                         </div>
@@ -204,12 +204,12 @@
                             <label for="highestQualification">Highest Qualification *</label>
                             <select id="highestQualification" name="highestQualification" required>
                                 <option value="">Select Qualification</option>
-                                <option value="diploma">DIPLOMA</option>
-                                <option value="degree">DEGREE</option>
-                                <option value="btech">B.TECH</option>
-                                <option value="phd">PHD</option>
-                                <option value="mba">MBA</option>
-                                <option value="mca">MCA</option>
+                                <option value="DIPLOMA">DIPLOMA</option>
+                                <option value="DEGREE">DEGREE</option>
+                                <option value="B.TECH">B.TECH</option>
+                                <option value="PHD">PHD</option>
+                                <option value="MBA">MBA</option>
+                                <option value="MCA">MCA</option>
                             </select>
                             <span class="error" id="highestQualificationError"></span>
                         </div>
@@ -217,8 +217,8 @@
                             <label for="physicallyHandicapped">Physically Handicapped *</label>
                             <select id="physicallyHandicapped" name="physicallyHandicapped" required>
                                 <option value="">Select</option>
-                                <option value="no">NO</option>
-                                <option value="yes">YES</option>
+                                <option value="NO">NO</option>
+                                <option value="YES">YES</option>
                             </select>
                             <span class="error" id="physicallyHandicappedError"></span>
                         </div>
