search and edit funtios implements done

--- a/src/PAGES/search.html
+++ b/src/PAGES/search.html
@@ -31,6 +31,7 @@
                     <th>LastName</th>
                     <th>MobileNumber</th>
                     <th>EmailID</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody id="studentTableBody">
