--- a/src/PAGES/addtrainer.html
+++ b/src/PAGES/addtrainer.html
@@ -48,8 +48,8 @@
         <div class="submenu Batches-submenu">
             <a href="#"><span class="material-icons"><span class="material-symbols-outlined">
                         person_add
-                    </span></span> Add Trainer</a>
-            <a href="#"><span class="material-icons">visibility</span> View Trainers</a>
+                    </span></span> Add Batches</a>
+            <a href="#"><span class="material-icons">visibility</span> View Batches</a>
         </div>
 
         <div class="dropdown-menu trainers-menu">
