chanegs done add batchs

--- a/src/PAGES/Dashboard.html
+++ b/src/PAGES/Dashboard.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="../CSS/Dashboard.css">
+	<script src="../backend/middleware/tokenvalidity.js"></script>
 
 </head>
 
@@ -45,7 +46,7 @@
 			<span class="material-icons toggle-icon Batches-toggle">expand_more</span>
 		</div>
 		<div class="submenu Batches-submenu">
-			<a href="#"><span class="material-icons"><span class="material-symbols-outlined">
+			<a href="addbatch.html"><span class="material-icons"><span class="material-symbols-outlined">
 						person_add
 					</span></span> Add Batches</a>
 			<a href="#"><span class="material-icons">visibility</span> View Batches</a>
