--- a/src/PAGES/Pdf_template.html
+++ b/src/PAGES/Pdf_template.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trainee Bio-Data</title>
     <link rel="stylesheet" href="../CSS/Pdf_template.css">
+    <script src="../backend/middleware/tokenvalidity.js"></script>
 </head>
 
 <body>
@@ -368,9 +369,9 @@
         &nbsp;<p>2. _____________________</p>&nbsp;
 
         <p><b>Date:</b> ______________________</p>
-        
-            <p style="text-align: right;"><b>Signature of parent/legal guardian</b></p>
-      
+
+        <p style="text-align: right;"><b>Signature of parent/legal guardian</b></p>
+
         <div class="btn">
             <!-- Save Button to Print/Download PDF -->
             <button class="save-btn" onclick="printPDF()">Download PDF</button>
