--- a/src/PAGES/addtrainer.html
+++ b/src/PAGES/addtrainer.html
@@ -46,7 +46,7 @@
             <span class="material-icons toggle-icon Batches-toggle">expand_more</span>
         </div>
         <div class="submenu Batches-submenu">
-            <a href="#"><span class="material-icons"><span class="material-symbols-outlined">
+            <a href="addbatch.html"><span class="material-icons"><span class="material-symbols-outlined">
                         person_add
                     </span></span> Add Batches</a>
             <a href="#"><span class="material-icons">visibility</span> View Batches</a>
