--- a/src/PAGES/studentform.html
+++ b/src/PAGES/studentform.html
@@ -342,6 +342,7 @@
     </div>
 
     <script src="../JS/studentform.js"></script>
+    <script src="../backend/middleware/tokenvalidity.js"></script>
 </body>
 
 </html>cript>
