--- a/src/PAGES/search.html
+++ b/src/PAGES/search.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/search.css">
     <title>Search Students</title>
+    <script src="../backend/middleware/tokenvalidity.js"></script>
 </head>
 
 <body>
